tests/ui/alias_wrong_kind.stderr
error[E0271]: type mismatch resolving `<here::C as ExternType>::Kind == ExternTypeKindShared`
   --> $DIR/alias_wrong_kind.rs:15:1
    |
15  | #[cxx::bridge]
    | ^^^^^^^^^^^^^^ expected struct `ExternTypeKindShared`, found struct `ExternTypeKindOpaqueCpp`
    |
   ::: $WORKSPACE/src/extern_type.rs
    |
    | pub fn verify_extern_type<T: ExternType<Kind = Kind, Id = Id>, Kind, Id>() {}
    |                                         ----------- required by this bound in `verify_extern_type`

error[E0271]: type mismatch resolving `<here::Shared as ExternType>::Kind == ExternTypeKindOpaqueCpp`
   --> $DIR/alias_wrong_kind.rs:15:1
    |
15  | #[cxx::bridge]
    | ^^^^^^^^^^^^^^ expected struct `ExternTypeKindOpaqueCpp`, found struct `ExternTypeKindShared`
    |
   ::: $WORKSPACE/src/extern_type.rs
    |
    | pub fn verify_extern_type<T: ExternType<Kind = Kind, Id = Id>, Kind, Id>() {}
    |                                         ----------- required by this bound in `verify_extern_type`
